exports[`test should correclty handle user actions 1`] = `
Object {
  "active": "third",
}
`;

exports[`test should correclty handle user actions 2`] = `
Object {
  "active": "item",
}
`;

exports[`test should correclty handle user actions 3`] = `
Object {
  "active": "third",
}
`;

exports[`test should correclty handle user actions 4`] = `
Array [
  Array [
    "third",
  ],
]
`;

exports[`test should render correctly with children 1`] = `
<ul
  className="menu"
  onKeyDown={[Function]}
  tabIndex={0}>
  <SelectListItem
    active="seconditem"
    item="item"
    onHover={[Function]}
    onSelect={[Function]}>
    <i
      className="myicon" />
    item
  </SelectListItem>
  <SelectListItem
    active="seconditem"
    item="seconditem"
    onHover={[Function]}
    onSelect={[Function]}>
    <i
      className="myicon" />
    item
  </SelectListItem>
  <SelectListItem
    active="seconditem"
    item="third"
    onHover={[Function]}
    onSelect={[Function]}>
    <i
      className="myicon" />
    item
  </SelectListItem>
</ul>
`;

exports[`test should render correctly without children 1`] = `
<ul
  className="menu"
  onKeyDown={[Function]}
  tabIndex={0}>
  <SelectListItem
    active="seconditem"
    item="item"
    onHover={[Function]}
    onSelect={[Function]} />
  <SelectListItem
    active="seconditem"
    item="seconditem"
    onHover={[Function]}
    onSelect={[Function]} />
  <SelectListItem
    active="seconditem"
    item="third"
    onHover={[Function]}
    onSelect={[Function]} />
</ul>
`;
